--- a/style.css
+++ b/style.css
@@ -36,9 +36,14 @@ ul li::before {
   background-color: #F2E9F2;
   padding-left:20px;
   padding-top:20px;
+  padding-bottom: 50px;
 }
 
-.pink_button {
+.online_cv{
+padding:0px;
+}
+
+.pink_bt {
   border-radius: 8px;
   color: #C66AAB;
   background-color: #C66AAB; /* PINK */
@@ -54,7 +59,7 @@ ul li::before {
   transition-duration: 0.4s;
 }
 
-.pink_button:hover {
+.pink_bt:hover {
   border-radius: 8px;
   color: #C66AAB;
   background-color: #F2E9F2; /* PINK */
