--- a/style.css
+++ b/style.css
@@ -233,3 +233,8 @@ margin-top: 50px;
     flex-direction: column;
   }
 }
+@media screen and (max-width: 700px) {
+  .online_cv {
+    display:none;
+  }
+}
